fix bottom of page being truncated on iOS

--- a/doc/style.styl
+++ b/doc/style.styl
@@ -125,7 +125,7 @@ header *, footer *
   display: inline-block
 
 main
-  margin-bottom: 5em
+  padding-bottom 10em
 
 footer
   position: fixed
